feat: fix URL deprecation warnings (#510)
* refactor: use URI.create instead of deprecated URL constructor

* refactor: use URI instead of deprecated URL constructor